# TermoBrasilSp

./: README.md  analise_dados_api.ipynb  analise_dados_file.ipynb  pyproject.toml
data/: clima_data_24_anos_sp.csv  clima_data_5_anos_sp.csv
scripts/: utils.py
