[tool.poetry]
name = "termobrasilsp"
version = "0.1.0"
description = ""
authors = ["hermes-augusto <hermes.barboza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "2.2.3"
pip = "^25.0.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
matplotlib = "<3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
